# src/Ymir.Api/openapi/v1.json
@@ -185,6 +185,54 @@
         }
       }
     },
+    "/api/conversations/{conversationId}/attachments": {
+      "post": {
+        "tags": [
+          "Conversations"
+        ],
+        "operationId": "UploadAttachment",
+        "parameters": [
+          {
+            "name": "conversationId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "fileName",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/octet-stream": {
+              "schema": {
+                "$ref": "#/components/schemas/Stream"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AttachmentResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/conversations/{conversationId}/messages": {
       "post": {
         "tags": [
@@ -1657,6 +1705,39 @@
           }
         }
       },
+      "AttachmentResponse": {
+        "required": [
+          "id",
+          "fileName",
+          "path",
+          "contentType",
+          "size"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "fileName": {
+            "type": "string"
+          },
+          "path": {
+            "type": "string"
+          },
+          "contentType": {
+            "type": "string"
+          },
+          "size": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "integer",
+              "string"
+            ],
+            "format": "int64"
+          }
+        }
+      },
       "AuditLogItemResponse": {
         "required": [
           "id",
@@ -2163,7 +2244,8 @@
           "content",
           "sequenceNo",
           "executionId",
-          "createdAt"
+          "createdAt",
+          "attachments"
         ],
         "type": "object",
         "properties": {
@@ -2198,6 +2280,12 @@
           "createdAt": {
             "type": "string",
             "format": "date-time"
+          },
+          "attachments": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/AttachmentResponse"
+            }
           }
         }
       },
@@ -2205,7 +2293,8 @@
         "required": [
           "id",
           "displayName",
-          "isDefault"
+          "isDefault",
+          "supportsImages"
         ],
         "type": "object",
         "properties": {
@@ -2216,6 +2305,9 @@
             "type": "string"
           },
           "isDefault": {
+            "type": "boolean"
+          },
+          "supportsImages": {
             "type": "boolean"
           }
         }
@@ -2723,6 +2815,16 @@
               "string"
             ],
             "format": "uuid"
+          },
+          "attachmentIds": {
+            "type": [
+              "null",
+              "array"
+            ],
+            "items": {
+              "type": "string",
+              "format": "uuid"
+            }
           }
         }
       },
@@ -2823,6 +2925,10 @@
             ]
           }
         }
+      },
+      "Stream": {
+        "type": "string",
+        "format": "binary"
       },
       "TestOidcSettingsRequest": {
         "required": [
